cartopy/docs/v0.17/_sources/gallery/wms.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_wms.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_wms.py:


Interactive WMS (Web Map Service)
---------------------------------

This example demonstrates the interactive pan and zoom capability
supported by an OGC web services Web Map Service (WMS) aware axes.





.. image:: /gallery/images/sphx_glr_wms_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt


    def main():
        fig = plt.figure(figsize=(10, 5))
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.InterruptedGoodeHomolosine())
        ax.coastlines()

        ax.add_wms(wms='http://vmap0.tiles.osgeo.org/wms/vmap0',
                   layers=['basic'])

        plt.show()


    if __name__ == '__main__':
        main()

**Total running time of the script:** ( 0 minutes  0.288 seconds)


.. _sphx_glr_download_gallery_wms.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: wms.py <wms.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: wms.ipynb <wms.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
